--- a/src/pages/HomePage/style.css
+++ b/src/pages/HomePage/style.css
@@ -4,6 +4,7 @@
   justify-content: end;
   gap: 15px;
   padding: 15px;
+  height: 100px;
 }
 .loginpage {
   display: flex;
@@ -15,6 +16,7 @@
   display: flex;
   width: 100%;
   height: 350px;
+  padding: 15px;
 }
 
 .banner {
@@ -27,6 +29,16 @@
   flex-direction: column;
   align-items: center;
   background-color: pink;
+  height: 400px;
+}
+.servico {
+  align-items: center;
+  height: 100px;
+  display: flex;
+  margin-top: 15px;
+  justify-content: center;
+  font-family: cursive;
+  font-size: 24px;
 }
 
 .modais {
@@ -37,10 +49,34 @@
 }
 .modal {
   display: flex;
-  border: 1px solid;
   height: 100px;
   width: 100px;
   align-items: center;
   border-radius: 5px;
   justify-content: center;
+  background-color: white;
+}
+.textmodais {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  padding: 5px;
+  justify-content: center;
+  width: 100%;
+}
+footer {
+  display: flex;
+  height: 130px;
+  flex-direction: column;
+}
+ul {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 100%;
+}
+li {
+  list-style: none;
+  font-size: 16px;
+  font-family: cursive;
 }
